blocks/offer-box/offer-box.css
.offer-box {
    box-shadow: 0 0 4px 0 rgb(0 0 0 / 25%);
    padding: 2rem;
    background-color: var(--color-white);
    display: flex;
    flex-direction: column;
}

.offer-box-container > div.offer-box-header {
    display: flex;
    align-items: center;
}

.offer-box-container.alternate-1 > div.offer-box-header {
    display: flex;
    align-items: center;
    flex-direction: column;
}

.offer-box-container.big-icon > div.offer-box-header {
    display: flex;
    align-items: center;
    flex-direction: column;
}

.offer-box.three-col > div.offer-box-header > div {
    width: 50%;
}

.block.offer-box.alternate-2 .offer-box-header > div {
    display: flex;
    flex-direction: row;
    align-items: center;
		min-height: 30%;
    gap: 1rem;
}

.offer-box.plain-simple > div.offer-box-header .icon-with-heading {
    display: flex;
    flex-direction: row;
    align-items: center;
    gap: 1rem;
}

.offer-box.three-col > div.offer-box-header > div:first-of-type {
    width: 25%;
}

.offer-box.three-col > div.offer-box-header > div:last-of-type {
    width: 25%;
}

.block.offer-box-wrapper {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    height: 100%;
}

.block.offer-box.alternate-2 {
    justify-content: space-between;
		padding-bottom: 3rem;
}

.block.offer-box.alternate-2 .offer-box-header .icon {
    max-width: 6rem;
    max-height: 6rem;
    width: auto;
    height: auto;
}

.block.offer-box.plain-simple .offer-box-header .icon-with-heading .icon {
    max-width: 6rem;
    max-height: 100%;
    width: auto;
    height: auto;
}

.block.offer-box.alternate-2 .offer-box-header {
    display: flex;
    flex-direction: column;
    min-height: 25%;
    align-items: flex-start;
}

.block.offer-box.alternate-3 .offer-box-header {
    height: auto;
    max-width: 100%;
}

.block.offer-box.plain-simple .offer-box-header {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: flex-start;
}

.offer-box h2 {
    font-size: 2rem;
    color: var(--color-blue);
    padding-left: 1rem;
}

.offer-box.alternate-1 h2,
.offer-box.alternate-1 h3 {
	padding-left: 0;
	text-align: center;
	color: #133b5c;
}

.block.offer-box.alternate-2 .offer-box-row h3 {
	min-width: 35%;
	width: 35%;
}

.block.offer-box.plain-simple .offer-box-row h3 {
	min-width: 35%;
	width: 35%;
}

.block.offer-box.alternate-2 div.offer-box-row:nth-child(2) {
    border-top: .0625rem solid var(--color-light-silver);
    margin: 1rem 0;
}

.block.offer-box.alternate-1 a {
	background-color: var(--color-button-primary);
	border-color: var(--color-button-primary);
	color: var(--color-black);
	margin-bottom: 0;
}

.block.offer-box.alternate-2 div.offer-box-row:last-child p a {
    background-color: var(--color-yellow);
    border-color: var(--color-yellow);
    color: var(--color-black)
}

.block.offer-box.alternate-2 .offer-box-header .icon-with-heading h1, 
.block.offer-box.alternate-2 .offer-box-header .icon-with-heading h2,
.block.offer-box.alternate-2 .offer-box-header .icon-with-heading h3,
.block.offer-box.alternate-2 .offer-box-header .icon-with-heading h4 {
    width: 75%;
    font-size: 2rem;
    line-height: 2.5rem;
    font-weight: 600;
}

.offer-box .offer-box-list-container p {
	margin-bottom: 1.5rem;
}

.block.offer-box.plain-simple p {
  margin-bottom: 0.75rem;
}

.offer-box.alternate-1 .offer-box-list-container p {
	font-size: 1rem;
	font-weight: 700;
}

.block.offer-box.offer-box.alternate-1 p {
	margin-bottom: 0.75rem;
}

.offer-box hr {
	border-bottom: 1px solid #b2b1b1;
	opacity: .25;
	margin: 1rem 0;
}

.block.offer-box.alternate-1 hr {
	border: .5px solid #b2b1b1;
}

.block.offer-box.alternate-1 .offer-box-header {
	min-height: 35%;
	text-align: center;
}

.block.offer-box.alternate-1 .min-height {
	min-height: 18%;
}

.block.offer-box.alternate-3 {
	gap: 1rem;
}

.block.offer-box.alternate-3 img {
	max-width: 100px;
	max-height: 100px;
	object-fit: cover;
}

.block.offer-box.alternate-3 .offer-box-header img {
    max-width: 100%;
    max-height: 100%;
}

.block.offer-box.alternate-2 .offer-box-header .promotion-with-text .text-with-badge {
    flex-direction: column;
    justify-items: flex-start;
    background: #ffc62b;
    border-radius: .5rem;
    color: #000;
    display: inline-block;
    font-size: .75rem;
    font-weight: 600;
    min-width: 6rem;
    padding: .5rem;
    text-align: center;
    text-transform: uppercase;
    width: 6rem;
}

.block.offer-box.alternate-2 .offer-box-header .promotion-with-text .text-with-badge > p:nth-child(2) {
    font-size: 1.5rem;
}

.block.offer-box.alternate-2 .offer-box-row {
    display: flex;
    flex-direction: row;
    align-items: center;
    gap: 1rem;
    padding: 1rem 0;
    text-align: left;
    border-bottom: .0625rem solid var(--color-light-silver);
}

.block.offer-box.alternate-2 .offer-box-row:last-of-type {
	border-bottom: none;
}

.block.offer-box.alternate-2 .offer-box-row ul {
    height: 100%;
}

.offer-box .offer-box-list-container li {
    padding-bottom: 1rem;
}

.offer-box a.button.primary {
    width: 100%;
		text-wrap: pretty;
}

.offer-box.big-icon .head-copy {
    display: none;
}

.offer-box span.icon {
    width: 100%;
    height: 40px;
}

.offer-box.big-icon span.icon {
    height: 100%;
    width: 328px;
    margin: unset;
}

.offer-box.alternate-1 span.icon {
    height: auto;
    width: auto;
}

.offer-box.alternate-1 .head-copy {
    font-size: 1.25rem;
    font-weight: 700;
    margin-bottom: .75rem;
}

.offer-box.alternate-3 .head-copy {
	min-height: 6%;
}

.offer-box.alternate-1 .offer-box-list-container {
    order: 4;
}

.section.offer-box-container.two-columns > div.default-content-wrapper, .section.offer-box-container.three-columns > div.offer-box-wrapper {
    display: flex;
    flex-direction: column;
}

.section.offer-box-container.two-columns > div.default-content-wrapper > div, .section.offer-box-container.three-columns > div.offer-box-wrapper > div.offer-box-container {
    width: 100%;
}

@media screen and (min-width: 992px) {
    .section.two-column-offer .offer-box-wrapper {
        display: flex;
        justify-content: space-between;
        gap: 2rem;
    }

    .section.four-column-offer .offer-box-wrapper {
        display: flex;
        justify-content: space-between;
        gap: 1rem;
        padding-left: 0;
    }

    .section.two-column-offer .offer-box {
        width: 50%;
    }

    .section.four-column-offer .offer-box {
        width: 25%;
    }

    .block.offer-box-wrapper {
        display: flex;
        flex-direction: row;
    }
    

    .section.three-column-offer .offer-box-wrapper, .section.offer-box-container.three-columns > div.offer-box-wrapper {
        display: flex;
        justify-content: space-between;
        gap: 2rem;
        flex-direction: row;
    }

    .section.three-column-offer .offer-box, .section.offer-box-container.three-columns > div.offer-box-wrapper > div.offer-box-container {
        width: 33%;
    }

    .section.offer-box-container.two-columns > div.default-content-wrapper {
        display: flex;
        flex-direction: row;
        column-gap: 2rem;
    }

    .section.offer-box-container.two-columns > div.default-content-wrapper > div {
        width: 50%;
    }

    .offer-box.big-icon span.icon {
        height: 100%;
        width: 109px;
    }

    .section.offer-with-text {
        display: flex;
        flex-direction: row;
        align-content: flex-start;
        margin: 2rem auto;
        padding: 0 1.5rem;
        max-width: var(--section-width);
    }

    .section.offer-with-text.offer-box-container.two-columns > div.default-content-wrapper {
        display: flex;
        flex-direction: column;
        width: 85%;
        margin: unset;
        padding: unset;
    }

    .section.offer-with-text.offer-box-container.two-columns > div.offer-box-wrapper {
        height: 65%;
        margin-top: 5px;
    }

    .section.offer-with-text.offer-box-container.two-columns > div.offer-box-wrapper .offer-box {
        padding: .75rem;
        justify-content: space-between;
    }

    .section.offer-with-text.offer-box-container.two-columns > div.offer-box-wrapper .offer-box:first-of-type {
        padding-left: 1.25rem;
    }
}

